<resources>
    <string name="app_name">点点</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="txt_login">登录</string>
    <string name="txt_register">注册</string>
    <string name="rb_news">新闻</string>
    <string name="rb_image">图片</string>
    <string name="rb_user">我的</string>
    <string name="txt_reset">重置</string>
    <string name="register_title">用户注册</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="txt_back">返回</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
