<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="24"
            android:persistentDrawingCache="animation"></android.support.v4.view.ViewPager>

        <RadioGroup
            android:id="@+id/tab_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E0e0e0"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:button="@null"
                android:checked="true"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/news"
                android:text="@string/rb_news"/>

            <RadioButton
                android:id="@+id/rb_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:button="@null"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/picture"
                android:text="@string/rb_image" />

            <RadioButton
                android:id="@+id/rb_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:button="@null"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/user"
                android:text="@string/rb_user" />
        </RadioGroup>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>
